# sccstress

./: AUTHORS  ChangeLog  NEWS  README  TODO  configure  configure.in
doc/: Makefile.am  Makefile.in  sccstress.1  sccstress.html  sccstress.info  sccstress.texi  stamp-vti  version.texi
src/: Makefile  Makefile.am  Makefile.in  sccstress.c
